--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,14 @@
     <title>SkyWay JS SDK Tutorial</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" type="text/css" href="style/fireworks.css" media="screen">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
+    <script type="text/javascript" src="script/key.js"></script>
+    <script type="text/javascript" src="script/script.js"></script>
+    <script type="text/javascript" src="script/debug.js"></script>
+    <script type="text/javascript" src="script/soundmanager2-nodebug-jsmin.js"></script>
+    <script type="text/javascript" src="script/fireworks.js"></script>
+    <script type="text/javascript" src="script/wscript.js"></script>
 </head>
 <div id="fireworks-template">
     <div id="fw" class="firework"></div>
@@ -36,11 +44,10 @@
             <button href="#" class="pure-button pure-button-success" type="submit">End Call</button
         </form>
     </div>
+    <input id="select2" type="button" onclick="start()" value="test">
+    <input type="button" onclick="stop()" value="stop">
+    <div id="final_span"></div>
+    <div id="interim_span"></div>
+
 </div>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
-<script type="text/javascript" src="script/script.js"></script>
-<script type="text/javascript" src="script/debug.js"></script>
-<script type="text/javascript" src="script/soundmanager2-nodebug-jsmin.js"></script>
-<script type="text/javascript" src="script/fireworks.js"></script>
 </html>
