--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,10 @@
     </div>
     <div id="fireContainer"></div>
     <div class="pure-g">
-    
-      <!-- Video area -->
+        <div class="panel-heading">
+            レインボーロード
+        </div>
+      <!-- Video area --><div class="panel-body">
       <div class="pure-u-2-3" id="video-container">
         <div id="their-videos"></div>
         <canvas id="hanabi"></canvas>
@@ -34,8 +36,8 @@
           <label id="my-label"></label>
           <video id="my-video" muted="true" autoplay playsinline></video>
         </div>
-      </div>
-    
+      </div></div>
+      <div class="panel-default panel col-sm-12">
       <!-- Steps -->
       <div class="pure-u-1-3">
         <h2>SkyWay Video Chat</h2>
@@ -74,7 +76,7 @@
           <p>Currently in room <span id="room-id">...</span></p>
           <p><a href="#" class="pure-button pure-button-error" id="end-call">End call</a></p>
         </div>
-      </div>
+      </div></div>
     </div>
 
     <textarea id="status" cols="100" rows="1">
